# timesense

./: .gitignore  Cargo.toml  README.md  timesense_config.sample.json
src/: fuzzy_match.rs  macos_app_detector.rs  main.rs  report_generator.rs  screenshot_analyzer.rs
src/app_detector/: linux.rs  macos.rs  mod.rs  windows.rs
