[package]
name = "timesense"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Cannon<alexander.cannon@farpointlabs.com>"]
description = "A time tracking application that uses OCR to track time spent on tasks."

[dependencies]
chrono = "0.4.40"
device_query = "3.0.1"
serde = "1.0.219"
serde_json = "1.0.140"
tesseract = "0.15.1"
