[package]
name = "timesense"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Cannon<alexander.cannon@farpointlabs.com>"]
description = "A time tracking application that uses OCR to track time spent on tasks."

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
device_query = "3.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tesseract = "0.15.1"
screenshots = "0.8.10"
rand = "0.8.5"
ctrlc = "3.4.1"
webbrowser = "0.8.1"
