[package]
name = "timesense"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Cannon<alexander.cannon@farpointlabs.com>"]
description = "A time tracking application that uses OCR to track time spent on tasks."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
device_query = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tesseract = "0.15.1"
screenshots = "0.8"
rand = "0.8.5"
ctrlc = "3.4"
webbrowser = "0.8"
core-foundation = "0.9.3"
objc = "0.2.7"
cocoa = "0.25.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
]}
